[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcgis-management"
version = "0.1.0"
description = "ArcGIS Enterprise and Online Management Toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Andy", email = "geogeek93@gmail.com"}]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=0.19.0",
    "pandas",
    "arcgis>=2.0.0"
]

[tool.setuptools]
packages = ["src"]

[project.scripts]
esri-cli = "src.main:app"